--- a/app/src/main/res/menu/navigation_drawer_menu.xml
+++ b/app/src/main/res/menu/navigation_drawer_menu.xml
@@ -3,5 +3,10 @@
 
     <item
         android:id="@+id/homeFragment"
+        android:icon="@drawable/ic_drawer_home_24"
         android:title="Home" />
+    <item
+        android:id="@+id/fandomTypeSelectionFragment"
+        android:icon="@drawable/ic_drawer_fandoms_24"
+        android:title="Fandoms" />
 </menu>
