--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,11 +3,34 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/homeFragment">
+    app:startDestination="@id/workListFragment">
 
     <fragment
         android:id="@+id/homeFragment"
         android:name="org.eidos.reader.ui.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" />
+    <fragment
+        android:id="@+id/fandomTypeSelectionFragment"
+        android:name="org.eidos.reader.ui.fandoms.FandomTypeSelectionFragment"
+        android:label="fragment_fandom_type_selection"
+        tools:layout="@layout/fragment_fandom_type_selection" />
+    <fragment
+        android:id="@+id/workReaderFragment"
+        android:name="org.eidos.reader.ui.reader.WorkReaderFragment"
+        android:label="fragment_work_reader"
+        tools:layout="@layout/fragment_work_reader" >
+        <argument
+            android:name="workURL"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/workListFragment"
+        android:name="org.eidos.reader.ui.worklist.WorkListFragment"
+        android:label="fragment_work_list"
+        tools:layout="@layout/fragment_work_list" >
+        <action
+            android:id="@+id/action_workListFragment_to_workReaderFragment"
+            app:destination="@id/workReaderFragment" />
+    </fragment>
 </navigation>
