--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,16 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorSecondaryVariant</item>
         <!-- Customize your theme here. -->
+        <!-- TODO: Use the default material colors for easier life
+        colorPrimary: color displayed most frequently across app screens. I guess this is the
+                      default interface color?
+        colorPrimaryVariant: variant shade
+        colorOnPrimary:
+
+        Basically treat these as alternate names for whatever you wanna use. colorPrimary can be
+        used as many or as little times as you want it.
+        -->
     </style>
 </resources>
