Add rudimentary functionality to display works associated with a tag

--- a/app/src/main/res/layout/fragment_work_reader.xml
+++ b/app/src/main/res/layout/fragment_work_reader.xml
@@ -26,9 +26,8 @@
                 android:id="@+id/workBody"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingLeft="5sp"
-                android:paddingRight="5sp"
-                android:scrollbarStyle="outsideInset"/>
+                android:padding="24sp"
+                android:scrollbarStyle="outsideInset" />
         </LinearLayout>
     </ScrollView>
 
