--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation"
-    app:startDestination="@id/workListFragment">
+    app:startDestination="@id/fandomTypeSelectionFragment">
 
     <fragment
         android:id="@+id/homeFragment"
@@ -14,7 +14,11 @@
         android:id="@+id/fandomTypeSelectionFragment"
         android:name="org.eidos.reader.ui.fandoms.FandomTypeSelectionFragment"
         android:label="fragment_fandom_type_selection"
-        tools:layout="@layout/fragment_fandom_type_selection" />
+        tools:layout="@layout/fragment_fandom_type_selection" >
+        <action
+            android:id="@+id/action_fandomTypeSelectionFragment_to_workListFragment"
+            app:destination="@id/workListFragment" />
+    </fragment>
     <fragment
         android:id="@+id/workReaderFragment"
         android:name="org.eidos.reader.ui.reader.WorkReaderFragment"
@@ -32,5 +36,8 @@
         <action
             android:id="@+id/action_workListFragment_to_workReaderFragment"
             app:destination="@id/workReaderFragment" />
+        <argument
+            android:name="tagName"
+            app:argType="string" />
     </fragment>
 </navigation>
