--- a/app/src/main/res/layout/fragment_work_reader.xml
+++ b/app/src/main/res/layout/fragment_work_reader.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingStart="10sp"
-    android:paddingEnd="10sp"
     tools:context=".ui.reader.WorkReaderFragment">
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <LinearLayout
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/workBody"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:padding="24sp"
+            android:scrollbarStyle="outsideInset" />
+    </LinearLayout>
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-            <TextView
-                android:id="@+id/workBody"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="24sp"
-                android:scrollbarStyle="outsideInset" />
-        </LinearLayout>
-    </ScrollView>
-
-</FrameLayout>
+</ScrollView>
