--- a/app/src/main/res/layout/card_work_blurb.xml
+++ b/app/src/main/res/layout/card_work_blurb.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,7 @@
     android:layout_marginStart="14dp"
     android:layout_marginTop="16dp"
     android:layout_marginEnd="14dp"
-    app:cardBackgroundColor="#FDECEC"
+    app:cardBackgroundColor="@color/off_white"
     app:cardCornerRadius="8dp"
     app:cardElevation="4dp">
 
@@ -90,4 +90,4 @@
             app:layout_constraintStart_toStartOf="@+id/workFreeforms"
             app:layout_constraintTop_toBottomOf="@+id/workFreeforms" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
