--- a/app/src/main/res/layout/fragment_fandom_type_selection.xml
+++ b/app/src/main/res/layout/fragment_fandom_type_selection.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Roy Mustang/Riza Hawkeye"
+        android:text="Riza Hawkeye/Roy Mustang"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
