--- a/app/src/main/res/layout/fragment_work_list.xml
+++ b/app/src/main/res/layout/fragment_work_list.xml
@@ -12,5 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="true"
+        android:scrollbars="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 </LinearLayout>
