Add chapter selection in WorkReader and add partial filter form layout

--- a/app/src/main/res/layout/fragment_work_reader.xml
+++ b/app/src/main/res/layout/fragment_work_reader.xml
@@ -34,6 +34,17 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
+                android:id="@+id/currentChapterIndicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0/0"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/nextChapterButton"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/previousChapterButton"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
                 android:id="@+id/nextChapterButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
