--- a/app/src/main/res/layout/form_work_filter.xml
+++ b/app/src/main/res/layout/form_work_filter.xml
@@ -1,91 +1,297 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/leftBorder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_begin="16dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/topBorder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="16dp" />
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/header"
-        android:layout_width="wrap_content"
+        android:id="@+id/workFilterTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Filter Works"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintStart_toStartOf="@+id/leftBorder"
-        app:layout_constraintTop_toTopOf="@+id/topBorder" />
+        android:text="Filter Works" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/includeTagsSectionHeaderTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="Include" />
+
+        <com.google.android.flexbox.FlexboxLayout
+            android:id="@+id/includeTagsFL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            app:alignContent="space_around"
+            app:alignItems="stretch"
+            app:flexWrap="wrap"
+            app:showDivider="beginning|middle|end">
+            <!--            app:dividerDrawable="@drawable/divider"-->
+
+            <EditText
+                android:id="@+id/includeTagsInputET"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:background="@android:color/transparent"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                app:layout_flexGrow="1" />
+
+        </com.google.android.flexbox.FlexboxLayout>
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/autocompleteIncludeTagsRV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/excludeTagsSectionHeaderTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="Exclude" />
+
+        <com.google.android.flexbox.FlexboxLayout
+            android:id="@+id/excludeTagsFL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            app:alignContent="space_around"
+            app:alignItems="stretch"
+            app:flexWrap="wrap"
+            app:showDivider="beginning|middle|end">
+            <!--            app:dividerDrawable="@drawable/divider"-->
+
+            <EditText
+                android:id="@+id/excludeTagsInputET"
+                android:layout_width="wrap_content"
+                android:layout_height="32dp"
+                android:background="@android:color/transparent"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                app:layout_flexGrow="1" />
+
+        </com.google.android.flexbox.FlexboxLayout>
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/autocompleteExcludeTagsRV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone" />
 
     <TextView
-        android:id="@+id/includeHeader"
-        style="@style/SectionHeaderText"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Include"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        app:layout_constraintStart_toStartOf="@+id/leftBorder"
-        app:layout_constraintTop_toBottomOf="@+id/header" />
+        android:text="Ratings" />
 
-    <AutoCompleteTextView
-        android:id="@+id/includeTagInput"
-        android:layout_width="wrap_content"
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showRatingGeneralAudiencesCB"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginStart="16dp"
+        android:text="General Audiences" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showRatingTeenAndUpAudiencesCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Teen And Up Audiences" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showRatingMatureCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Mature" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showRatingExplicitCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Explicit" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showRatingNotRatedCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Not Rated" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Warnings" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showWarningNoArchiveWarningsApplyCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="No Archive Warnings Apply" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showWarningGraphicViolenceCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Graphic Depictions Of Violence" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showWarningMajorCharacterDeathCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Major Character Death" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showWarningUnderageCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Underage" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showWarningRapeCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Rape/Non-Con" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showWarningCreatorChoseNoWarningsCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Creator Chose Not To Use Archive Warnings" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Categories" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showCategoryGenCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Gen" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showCategoryFMCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="F/M" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showCategoryMMCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="M/M" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showCategoryFFCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="F/F" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showCategoryMultiCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Multi" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showCategoryOtherCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Other" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Crossovers" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showCrossoversCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Show crossovers" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showNonCrossoversCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Show non-crossovers" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Completion Status" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showCompletedWorksCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Show completed works" />
+
+    <com.google.android.material.checkbox.MaterialCheckBox
+        android:id="@+id/showIncompleteWorksCB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:text="Show incomplete works" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Word Count" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Date Updated" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Search within results" />
+
+    <EditText
+        android:id="@+id/searchWithinResultsET"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:ems="10"
-        android:hint="Enter a tag here"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="@+id/leftBorder"
-        app:layout_constraintTop_toBottomOf="@+id/includeHeader" />
+        android:hint="Search within results"
+        android:inputType="textPersonName" />
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/includedTagsChipGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/leftBorder"
-        app:layout_constraintTop_toBottomOf="@+id/includeTagInput">
-
-    </com.google.android.material.chip.ChipGroup>
-
-    <TextView
-        android:id="@+id/excludeHeader"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Exclude"
-        app:layout_constraintStart_toStartOf="@+id/leftBorder"
-        app:layout_constraintTop_toBottomOf="@+id/includedTagsChipGroup"
-        style="@style/SectionHeaderText" />
-
-    <AutoCompleteTextView
-        android:id="@+id/excludeTagInput"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Enter a tag here"
-        android:inputType="textPersonName"
-        app:layout_constraintStart_toStartOf="@+id/leftBorder"
-        app:layout_constraintTop_toBottomOf="@+id/excludeHeader" />
-
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/excludeTagsChipGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="@+id/leftBorder"
-        app:layout_constraintTop_toBottomOf="@+id/excludeTagInput">
-
-    </com.google.android.material.chip.ChipGroup>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
