Add autocomplete to form, rework the form and more
Changes:
1. Add autocomplete functionality to form.
   Now the form will populate autocomplete suggestions.
2. Convert form to TableLayout
3. Partial commit for implementing storage and retrieval of form state.

Issues:
1. Long tags still cause major issues with wrapping.

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -39,6 +39,9 @@
         <argument
             android:name="tagName"
             app:argType="string" />
+        <action
+            android:id="@+id/action_workListFragment_to_workListFilterFragment"
+            app:destination="@id/workListFilterFragment" />
     </fragment>
     <fragment
         android:id="@+id/placeholderFragment"
@@ -49,4 +52,8 @@
             android:id="@+id/action_placeholderFragment_to_workListFragment"
             app:destination="@id/workListFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/workListFilterFragment"
+        android:name="org.eidos.reader.ui.worklistfilter.WorkListFilterFragment"
+        android:label="WorkListFilterFragment" />
 </navigation>
