--- a/app/src/main/res/layout/form_work_filter.xml
+++ b/app/src/main/res/layout/form_work_filter.xml
@@ -51,6 +51,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="32dp"
                     android:background="@android:color/transparent"
+                    android:hint="Enter a tag..."
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     app:layout_flexGrow="1" />
@@ -96,6 +97,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="32dp"
                     android:background="@android:color/transparent"
+                    android:hint="Enter a tag..."
                     android:imeOptions="actionDone"
                     android:inputType="text"
                     app:layout_flexGrow="1" />
