--- a/app/src/main/res/layout/form_work_filter.xml
+++ b/app/src/main/res/layout/form_work_filter.xml
@@ -123,6 +123,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="General Audiences" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -130,6 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Teen And Up Audiences" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -137,6 +139,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Mature" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -144,6 +147,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Explicit" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -151,6 +155,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Not Rated" />
 
         <TextView
@@ -163,6 +168,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="No Archive Warnings Apply" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -170,6 +176,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Graphic Depictions Of Violence" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -177,6 +184,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Major Character Death" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -184,6 +192,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Underage" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -191,6 +200,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Rape/Non-Con" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -198,6 +208,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Creator Chose Not To Use Archive Warnings" />
 
         <RadioGroup
@@ -228,6 +239,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Gen" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -235,6 +247,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="F/M" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -242,6 +255,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="M/M" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -249,6 +263,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="F/F" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -256,6 +271,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Multi" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -263,6 +279,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Other" />
 
         <TextView
@@ -275,6 +292,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Show crossovers" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -282,6 +300,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Show non-crossovers" />
 
         <TextView
@@ -294,6 +313,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Show completed works" />
 
         <com.google.android.material.checkbox.MaterialCheckBox
@@ -301,6 +321,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:checked="true"
             android:text="Show incomplete works" />
 
         <TextView
@@ -325,6 +346,26 @@
             android:ems="10"
             android:hint="Search within results"
             android:inputType="textPersonName" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal" >
+
+            <Button
+                android:id="@+id/buttonReset"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Reset" />
+
+            <Button
+                android:id="@+id/buttonSubmit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Filter" />
+        </LinearLayout>
 
     </TableLayout>
 </ScrollView>
